# platformer

./: .gitignore  CMakeLists.txt  LICENSE  Mechanics.md  Notes.md  README.md  TODO
Classes/: AnimationBase.h  AnimationLayer.h  AppDelegate.cpp  AppDelegate.h  Archer.cpp  Archer.hpp  Barrel.cpp  Barrel.hpp  BarrelManager.hpp  BarrelView.hpp  BaseDemo.h  BoneOffset.h  Border.hpp  BossFightScene.cpp  Bot.cpp  Bot.hpp  BoulderPusher.cpp  BoulderPusher.hpp  BoundingBox.h  Brain.hpp  CMakeLists.txt  ContactHandler.cpp  ContactHandler.hpp  Core.cpp  Core.hpp  CoreElement.h  CurseHub.cpp  CurseHub.hpp  Curses.cpp  Curses.hpp  Dash.cpp  Dash.hpp  DeathScreen.cpp  DeathScreen.hpp  DebugScreen.cpp  DebugScreen.hpp  DragonBonesAnimator.cpp  DragonBonesAnimator.hpp  DragonBonesEvent.h  Drawable.h  (+78 more)
Classes/components/: CurseHub.cpp  CurseHub.hpp  Dash.hpp  DragonBonesAnimator.cpp  DragonBonesAnimator.hpp  Influence.hpp  Movement.hpp  ParallaxBackground.cpp  ParallaxBackground.hpp  Path.hpp  Platform.hpp  Projectile.hpp
Classes/objects/: Stalactite.cpp  Stalactite.hpp
Classes/own-extension/dragonBones/: CMakeLists.txt
Classes/own-extension/dragonBones/animation/: CMakeLists.txt
Classes/own-extension/dragonBones/armature/: CMakeLists.txt
Classes/own-extension/dragonBones/cocos2dx/: CCArmatureDisplay.cpp  CCFactory.cpp
Classes/own-extension/dragonBones/core/: CMakeLists.txt
Classes/own-extension/dragonBones/event/: CMakeLists.txt
Classes/own-extension/dragonBones/model/: CMakeLists.txt
Classes/own-extension/dragonBones/parser/: CMakeLists.txt  JSONDataParser.h
Classes/scenes/: BossFightScene.cpp  BossFightScene.hpp  DeathScreen.cpp  DebugScreen.cpp  DebugScreen.hpp  Interface.hpp  LevelScene.cpp  LevelScene.hpp
Classes/units/: Archer.cpp  Archer.hpp  AxWarrior.cpp  AxWarrior.hpp  BanditBoss.cpp  BanditBoss.hpp  Bot.cpp  Bot.hpp  BoulderPusher.cpp  BoulderPusher.hpp  Cannon.cpp  Cannon.hpp  FireCloud.cpp  FireCloud.hpp  Player.cpp  Player.hpp  Slime.cpp  Slime.hpp  Spearman.cpp  Spearman.hpp  Spider.cpp  Spider.hpp  Stalactite.cpp  Stalactite.hpp  Unit.cpp  Unit.hpp  Warrior.cpp  Warrior.hpp  Wasp.cpp  Wasp.hpp  Wolf.cpp  Wolf.hpp
Resources/Map/: level_4.tmx  level_4_boss.tmx  level_5.tmx  tiles.plist
Resources/Map/props/barrel_b/: barrel_b.dbproj  barrel_b_ske.json  barrel_b_tex.json
Resources/Map/props/barrel_s/: barrel_s.dbproj  barrel_s_ske.json  barrel_s_tex.json
Resources/Map/props/box/: box.dbproj  box_ske.json  box_tex.json
Resources/Map/props/bucket/: bucket.dbproj  bucket_ske.json  bucket_tex.json
Resources/Map/props/chest/: chest.dbproj  chest_ske.json  chest_tex.json
Resources/archer/: archer.dbproj  archer_ske.json  archer_tex.json
Resources/barrel/: barrel.dbproj  barrel_ske.json  barrel_tex.json
Resources/boss/boss/: boss.dbproj  boss_ske.json  boss_tex.json
Resources/boss/boss_attack/: fire.dbproj  fire_ske.json  fire_tex.json
Resources/boss/boss_c/: boss.dbproj  boss_tex.json
Resources/boss/boss_cloud/: cloud.dbproj  cloud_ske.json  cloud_tex.json
Resources/boss/boss_fireball/: fireball.dbproj  fireball_ske.json  fireball_tex.json
Resources/cannon/: cannon.dbproj  cannon_ske.json  cannon_tex.json
Resources/configuration/: units.json
Resources/ent/: ent.dbproj  ent_ske.json  ent_tex.json
Resources/ent_attack/: ent_attack.dbproj  ent_attack_ske.json  ent_attack_tex.json
Resources/eye/: eye.dbproj  eye_ske.json  eye_tex.json
Resources/eye_attack/: eye_attack.dbproj  eye_attack_ske.json  eye_attack_tex.json
Resources/fireball/: fireball_ske.json  fireball_tex.json
Resources/mc/mc/: mc.dbproj  mc_ske.json  mc_tex.json
Resources/mc/mc_fireball/: mc_fireball.dbproj  mc_fireball_ske.json  mc_fireball_tex.json
Resources/mc/mc_special/: mc_special.dbproj  mc_special_ske.json  mc_special_tex.json
Resources/old_man/: old_man.dbproj  old_man_ske.json  old_man_tex.json
Resources/slime/: slime.dbproj  slime_ske.json  slime_tex.json
Resources/slime_attack/: slime_attack.dbproj  slime_attack_ske.json  slime_attack_tex.json
Resources/spear_man/: spear_man.dbproj  spear_man_ske.json  spear_man_tex.json
Resources/spider/: spider.dbproj  spider_ske.json  spider_tex.json
Resources/stalactites/stalactite_1/stalactite_1/: stalactite_1.dbproj  stalactite_1_ske.json  stalactite_1_tex.json
Resources/stalactites/stalactite_1/stalactite_1_projectile/: stalactite_1_projectile.dbproj  stalactite_1_projectile_ske.json  stalactite_1_projectile_tex.json
Resources/stalactites/stalactite_2/stalactite_2/: stalactite_2.dbproj  stalactite_2_ske.json  stalactite_2_tex.json
Resources/stalactites/stalactite_2/stalactite_2_projectile/: stalactite_2_projectile.dbproj  stalactite_2_projectile_ske.json  stalactite_2_projectile_tex.json
Resources/stalactites/stalactite_3/stalactite_3/: stalactite_3.dbproj  stalactite_3_ske.json  stalactite_3_tex.json
Resources/stalactites/stalactite_3/stalactite_3_projectile/: stalactite_3_projectile.dbproj  stalactite_3_projectile_ske.json  stalactite_3_projectile_tex.json
Resources/stalactites/stalactite_4/stalactite_4/: stalactite_4.dbproj  stalactite_4_ske.json  stalactite_4_tex.json
Resources/stalactites/stalactite_4/stalactite_4_projectile/: stalactite_4_projectile.dbproj  stalactite_4_projectile_ske.json  stalactite_4_projectile_tex.json
Resources/warrior/: warrior.dbproj  warrior_ske.json  warrior_tex.json
Resources/wasp/: wasp.dbproj  wasp_ske.json  wasp_tex.json
Resources/wolf/: wolf.dbproj  wolf_ske.json  wolf_tex.json
cocos2d/cocos/: CMakeLists.txt
cocos2d/cocos/base/: ccConfig.h
cocos2d/cocos/renderer/backend/opengl/: ProgramGL.cpp
proj.android/: .gitignore  gradle.properties  settings.gradle
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.ios_mac/mac/: Info.plist
